--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gem Game</title>
 
 <!-- reset -->
@@ -50,18 +51,18 @@
 
 <section>
 
-        <div class="col-md-1 col-md-offset-2" id="winsLosses">wins/losses</div>
+        <div class="col-md-2 col-md-offset-2" id="winsLosses">wins/losses</div>
 </section>
 
-<aside class="col-med-2 col-md-offset-9" id="playButton">
+<aside class="col-med-3 col-md-offset-9" id="playButton">
     <button id="playAgain" type="button"class="btn btn-default">play again?</button>
 </aside>   
 
-<!--gems-->
 
-<div id="junk" class="col-md-8 col-md-offset-3">
+
+<div id="junk" class="col-md-6 col-md-offset-3">
 <button id="jars"><img src ="assets/images/jar.jpg" style="height: 75px"><h1></h1></button> 
-<button id="books"><img src ="assets/images/books.jpg" style=  "height: 75px"><h1></h1></button>
+<button id="books"><img src ="assets/images/books.jpg" style= "height: 75px"><h1></h1></button>
 <button id="chairs"><img src ="assets/images/chairs.jpg" style="height: 75px"><h1></h1></button>
 <button id="skillet"><img src ="assets/images/skillet.jpg" style="height: 75px"><h1></h1></button>
 
