--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gem Game</title>
+  <title>Junkin' Game</title>
 
 <!-- reset -->
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
